--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,17 @@
     <div id="content">
             <script type="text/javascript">requirejs(["./resources/js/nav-bar.js"], function(){ })</script>
       <div class="nav-bar">
-        <div class="nav-bar-content"><a class="nav-bar-item" id="nav-item-left" href="#examples">left</a><a class="nav-bar-item" id="nav-item-right" href="#about">right</a><a class="nav-bar-item" id="nav-item-top" href="#contact">top</a><a class="nav-bar-item" id="nav-item-bottom">bottom</a></div>
+        <div class="nav-bar-content">
+          <div class="nav-item-container nav-item-container-left"><a class="nav-bar-item" id="nav-item-left" href="#">left</a></div>
+          <div class="nav-item-container nav-item-container-right"><a class="nav-bar-item" id="nav-item-right" href="#">right</a></div>
+          <div class="nav-item-container nav-item-container-top"><a class="nav-bar-item" id="nav-item-top" href="#">top</a></div>
+          <div class="nav-item-container nav-item-container-bottom"><a class="nav-bar-item" id="nav-item-bottom" href="#">bottom</a></div>
+        </div>
       </div>
       <div class="content-row">
-        <div class="screen" id="contact"></div>
+        <div class="empty-screen screen"></div>
+        <div class="screen" id="contact" title="Contact"></div>
+        <div class="empty-screen screen"></div>
       </div>
       <div class="content-row">
         <div class="screen" id="examples" title="Examples"></div>
