Added contact form

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,37 @@
         <div id="content">
           <div class="content-row">
             <div class="empty-screen screen"></div>
-            <div class="screen" id="contact" name="#contact" title="Contact"></div>
+            <div class="screen" id="contact" name="#contact" title="Contact">
+                            <script type="text/javascript">requirejs(["./resources/js/fancy-text-box.js"], function(){ })</script>
+              <div class="contact-form">
+                <div class="contact-form-content">
+                  <form class="contact-form-form" action="contact-form.php">
+                                  <div class="fancy-text-box">
+                                    <div class="fancy-text-box-content">
+                                      <input class="fancy-text-box-input" type="text" name="first-name">
+                                      <h4 class="fancy-text-box-placeholder">First Name</h4>
+                                    </div>
+                                  </div>
+                                  <div class="fancy-text-box">
+                                    <div class="fancy-text-box-content">
+                                      <input class="fancy-text-box-input" type="text" name="last-name">
+                                      <h4 class="fancy-text-box-placeholder">Last Name</h4>
+                                    </div>
+                                  </div>
+                                  <div class="fancy-text-box">
+                                    <div class="fancy-text-box-content">
+                                      <input class="fancy-text-box-input" type="text" name="email">
+                                      <h4 class="fancy-text-box-placeholder">Email</h4>
+                                    </div>
+                                  </div>
+                                  <div class="fancy-text-area">
+                                    <textarea class="fancy-text-area-input" name="message"></textarea>
+                                  </div>
+                    <input class="contact-form-submit" type="Submit" value="Submit">
+                  </form>
+                </div>
+              </div>
+            </div>
             <div class="empty-screen screen"></div>
           </div>
           <div class="content-row">
