Page waits to appear until loaded

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <script type="text/javascript">requirejs(["./resources/js/parallax.js"], function(){ })</script>
     <script type="text/javascript">requirejs(["./resources/js/main.js"], function(){ })</script>
   </head>
-  <body>
+  <body class="hidden">
     <div id="viewport">
             <script type="text/javascript">requirejs(["./resources/js/nav-bar.js"], function(){ })</script>
       <div class="nav-bar">
