--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Cadence</title>
+    <title>Canter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="./resources/css/styles.css" rel="stylesheet">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -27,6 +27,7 @@
             <div class="screen" id="contact" name="#contact" title="Contact">
                             <script type="text/javascript">requirejs(["./resources/js/fancy-text-box.js"], function(){ })</script>
               <div class="contact-form">
+                <div class="contact-form-background"></div>
                 <div class="contact-form-content">
                   <form class="contact-form-form" action="contact-form.php">
                                   <div class="fancy-text-box">
@@ -61,7 +62,7 @@
             <div class="screen" id="examples" name="#examples" title="Examples"></div>
             <div class="parallax-container screen" id="home" name="#home" title="Home">
               <div class="home-content-container parallax-element">
-                <h1 class="home-title-1">cadence</h1>
+                <h1 class="home-title-1">canter</h1>
               </div>
               <div class="home-background-content">
                 <div class="home-background-content-darken"></div>
@@ -69,7 +70,24 @@
                 <div class="home-background"></div>
               </div>
             </div>
-            <div class="screen" id="about" name="#about" title="About"></div>
+            <div class="screen" id="about" name="#about" title="About">
+              <div class="about-content parallax-container">
+                            <div class="splash component">
+                              <div class="splash-image vignette parallax-element" style="background-image: url(./resources/images/sunset.JPG);"></div>
+                            </div>
+                <div class="about-text-container">
+                  <h1 class="title-heading">canter</h1>
+                  <div class="paragraph-content">
+                    <p>Today's font choice is from Brooklyn based graphic designer Christopher J Lee. Canter is an all caps, condensed typeface available in five different weights, designed as a display type for titles, headlines, and posters.  Lee says, &quot;This was my first attempt using FontLab Studio, so please bear with me! All of the Canter weights are ready for download, just ask if you want a copy.&quot; If this is what he can create for his first attempt, we can't wait to see what he comes up with next.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="content-row">
+            <div class="empty-screen screen"></div>
+            <div class="empty-screen screen"></div>
+            <div class="empty-screen screen"></div>
           </div>
         </div>
       </div>
